--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,10 @@
 @use "sass:math";
-
 // Підключення міксинів ===========================================================================================================================================================================================================================================================================
 @import "base/mixins";
 
 // Підключення шрифтів ===========================================================================================================================================================================================================================================================================
 //&display=swap - додати при підключенні через плагін
+@import url("https://fonts.googleapis.com/css?family=Roboto:regular&display=swap");
 
 // Підключити, якщо є локальні файли шрифтів
 //@import "fonts/fonts";
@@ -18,20 +18,21 @@
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 
 // За замовчуванням шрифт ==============================================================================================================================================================================================================================================================================
-$fontFamily: "";
-$fontSize: rem(14); // де 14(px) - розмір шрифту за замовчуванням з макету
+$fontFamily: "Roboto", sans-serif;
+$fontSize: rem(19); // де 14(px) - розмір шрифту за замовчуванням з макету
 
 // Основні кольори
 $mainColor: #000; // Колір шрифту за замовчуванням
-
+$accentColor: #e9672b;
+$bglight: #fbf8f5;
 // Налаштування адаптивної сітки ===============================================================================================================================================================================================================================================================================================
 
 // Мінімальна ширина сторінки
 $minWidth: 320;
 // Ширина полотна (макету)
-$maxWidth: 1920;
+$maxWidth: 1280;
 // Ширина обмежуючого контейнера (0 = немає обмеження)
-$maxWidthContainer: 1170;
+$maxWidthContainer: 1188;
 // Загальний відступ у контейнера
 // (30 = по 15px ліворуч і праворуч, 0 = немає відступу)
 $containerPadding: 30;
